apps/weatherserver/overlays/prod/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherserver
spec:
  template:
    spec:
      containers:
        - name: weatherserver
          image: asia-south1-docker.pkg.dev/worlddatetime-stage/weatherserver/weatherserver:f8059fd
