apps/weatherserver/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherserver
spec:
  replicas: 4
