apps/weatherserver/overlays/prod/gateway-host.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weatherserver
spec:
  hostnames:
    - www.challan.pro
    - challan.pro
